plugins {
	id 'java'
	id 'war'
	id 'org.springframework.boot' version '4.0.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

processResources {
	from("src/main/java") {
		include "**/*.xml"
	}
}

group = 'org.example'
version = '0.0.1-SNAPSHOT'
description = 'sadari'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

def jjwtVersion = '0.13.0'
def awsSdkVersion = '2.51.1'

dependencies {

	// 보안 관련 (인증/인가) 기능을 제공하는 스타터
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// 스프링 시큐리티 기반의 OAuth 2.0 클라이언트 라이브러리
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	// 스프링 MVC를 이용한 웹 개발(REST API, 컨트롤러 등)의 핵심 라이브러리
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'

	// 요청 본문 검증에 필요한 의존성이다.
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// Swagger UI와 OpenAPI 3 문서를 자동 생성해 API 정의서를 브라우저에서 확인할 수 있게 해주는 라이브러리
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.3'

	// MyBatis와 스프링 부트를 연동하여 SQL 매퍼를 사용할 수 있게 해주는 라이브러리
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:4.0.1'

	// 컴파일 시점에 Getter/Setter 등을 자동으로 생성해주는 코드 다이어트용 라이브러리
	compileOnly 'org.projectlombok:lombok'

	// JSON 데이터와 자바 객체 간의 변환(직렬화/역직렬화)을 담당하는 핵심 라이브러리
	// Spring Boot 4/Spring 7은 최신 Jackson API(DatatypeFeature 등)를 사용하므로 버전은 Boot BOM에 맡긴다.
	implementation 'com.fasterxml.jackson.core:jackson-databind'

	// 코드 수정 시 서버 자동 재시작 등 개발 편의 기능을 제공하는 도구
	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	// MySQL 데이터베이스 연결을 위한 JDBC 드라이버
	runtimeOnly 'com.mysql:mysql-connector-j'

	// 컴파일 단계에서 Lombok 어노테이션을 해석하고 실제 코드를 생성하는 프로세서
	annotationProcessor 'org.projectlombok:lombok'

	// 외장 톰캣 환경에 배포할 때 런타임 시 필요한 라이브러리 포함 설정
	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat-runtime'

	// Redis 라이브러리
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// 세션을 Redis에 저장해 주는 라이브러리
	implementation 'org.springframework.session:spring-session-data-redis'

	// Firebase Cloud Messaging 서버 발송을 위한 공식 Admin SDK
	implementation 'com.google.firebase:firebase-admin:9.10.0'

	// AWS S3와 향후 S3 호환 스토리지에 파일을 저장하기 위한 공식 SDK
	implementation platform("software.amazon.awssdk:bom:${awsSdkVersion}")
	implementation 'software.amazon.awssdk:s3'

	/*
	 * JWT API와 런타임 구현체 버전이 다르면 parserBuilder/setSubject 같은 메서드 호출 시
	 * 컴파일은 성공해도 실행 중 NoSuchMethodError가 발생하므로 세 모듈을 하나의 버전으로 관리한다.
	 */
	implementation "io.jsonwebtoken:jjwt-api:${jjwtVersion}"
	runtimeOnly "io.jsonwebtoken:jjwt-impl:${jjwtVersion}"
	runtimeOnly "io.jsonwebtoken:jjwt-jackson:${jjwtVersion}"

	// --------------------- 테스트 관련 설정 ---------------------
	// 보안 기능 테스트용 (현재 주석 처리됨)
	// testImplementation 'org.springframework.boot:spring-boot-starter-security-test'

	// 웹 컨트롤러 계층을 테스트하기 위한 라이브러리
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'

	// MyBatis 매퍼와 쿼리 작동 여부를 테스트하기 위한 라이브러리
	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:4.0.1'

	//. JUnit 5 테스트를 실행하기 위한 플랫폼 런처 설정
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
def frontendDir = "$projectDir/src/main/frontend"
def skipFrontendBuild = providers.gradleProperty("skipFrontendBuild").map { it.toBoolean() }.orElse(false)
def frontendInstallCommand = providers.gradleProperty("frontendInstallCommand").orElse("install")

sourceSets {
	main {
		resources { srcDirs = ["$projectDir/src/main/resources"]
		}
	}
}

processResources {
	if (!skipFrontendBuild.get()) {
		dependsOn "copyReactBuildFiles"
	}
}

task installReact(type: Exec) {
	workingDir "$frontendDir"
	inputs.dir "$frontendDir"
	group = BasePlugin.BUILD_GROUP
	def npmInstallCommand = frontendInstallCommand.get()
	if (System.getProperty('os.name').toLowerCase(Locale.ROOT).contains('windows')) {
		// 로컬 Windows 빌드에서는 실행 중인 esbuild.exe를 npm ci가 삭제하려다 실패할 수 있어 기본값은 install로 둔다.
		commandLine 'npm.cmd', npmInstallCommand
	}
	else {
		// Docker/CI에서는 -PfrontendInstallCommand=ci를 넘겨 package-lock.json 기준의 재현 가능한 설치를 수행한다.
		commandLine 'npm', npmInstallCommand
	}
}

task buildReact(type: Exec) {
	dependsOn "installReact"
	workingDir "$frontendDir"
	inputs.dir "$frontendDir"
	group = BasePlugin.BUILD_GROUP
	if (System.getProperty('os.name').toLowerCase(Locale.ROOT).contains('windows')) {
		commandLine "npm.cmd", "run-script", "build"
	} else {
		commandLine "npm", "run-script", "build"
	}
}

task copyReactBuildFiles(type: Copy) {
	dependsOn "buildReact"
	doFirst {
		delete "$projectDir/src/main/resources/static"
	}
	from "$frontendDir/dist"
	into "$projectDir/src/main/resources/static"
}
